css changes, fixed overflow problem

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,6 +10,7 @@ body {
     box-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff ;
     margin: 3%;
     animation: pulse 3s infinite;
+    line-height: 0.5;
 }
   
   @keyframes pulse {
@@ -132,7 +133,7 @@ body {
 .words{
     display: inline-block;
     float: left;
-    clear: left;
+    /* clear: left; */
     width: 38%;
     text-align: right;
     font-family: 'FifteenTwentyRegular'; 
@@ -150,3 +151,29 @@ input {
   color: black;
 
 }
+
+#story {
+    font-family: 'FifteenTwentyRegular'; 
+    font-weight: normal; 
+    font-style: normal; 
+    padding-left: 1%;
+    font-weight: bolder;
+    text-shadow: 3px 3px black;
+    color: white;
+    font-size: 36px;
+    line-height: 1.5;
+}
+
+button {
+    line-height: 1.5;
+
+}
+
+
+  #smileys {
+      width: 250px;
+      height: 250px;
+      float: right;
+      transform: rotateY(180deg);
+
+  }
